# SimpleCalculatorPro

./: .gitignore  Arithmetics.cpp  Arithmetics.h  CMakeLists.txt  Calc.ui  Calculator.cpp  Calculator.h  History.cpp  History.h  Interface.cpp  Interface.h  SCP.cpp
